step 4. small fixings.