@@ -1,7 +1,7 @@
 package io.inprice.api.app.ticket;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -201,7 +201,7 @@ public class TicketService {
 			);
     }
 
-    if (CollectionUtils.isNotEmpty(dto.getStatuses())) {
+    if (CollectionUtils.isNotEmpty(dto.getSubjects())) {
     	where.append(
 		    String.format(" and subject in (%s) ", io.inprice.common.utils.StringUtils.join("'", dto.getSubjects()))
 			);
@@ -245,7 +245,7 @@ public class TicketService {
       .map(new TicketMapper())
       .list();
 
-      return new Response(Collections.singletonMap("rows", searchResult));
+      return new Response(Map.of("rows", searchResult));
     } catch (Exception e) {
       logger.error("Failed in full search for tickets.", e);
       return Responses.ServerProblem.EXCEPTION;
